--- a/force-app/main/default/pages/BMQuotePDF.page
+++ b/force-app/main/default/pages/BMQuotePDF.page
@@ -751,7 +751,7 @@ want to discuss your quote, please call us on 0333 202 9488**. Your quote is val
                         
                         
                         <p style="font-size:75%"><span  class='boldText'>You can accept your quote online via our customer portal - check our email for the link. Or if you
-                                want to discuss your quote, please call us on 0333 202 9488**. Your quote is valid for 28 days.</span> <br/>
+                                want to discuss your quote, please call us on 0333 202 9488**(option 3). Your quote is valid for 28 days.</span> <br/>
                             
                             
                             <br/><br/>
@@ -903,8 +903,8 @@ want to discuss your quote, please call us on 0333 202 9488**. Your quote is val
                     
                     <div id="footer-contact" class='leftRadius ' style="position:relative;top:-8px;">
                         
-                        <p style="font-size:100%"><span  >You can accept your quote online via our customer portal - check our email for the link. Or if you
-                                want to discuss your quote, please call us on 0333 202 9488**. Your quote is valid for 28 days.</span>
+                        <p style="font-size:95%"><span  >You can accept your quote online via our customer portal - check our email for the link. Or if you
+                                want to discuss your quote, please call us on 0333 202 9488**(option 3). Your quote is valid for 28 days.</span>
                         </p>
                     
                     </div>
